--- a/TractorSpecs/app/model/model.html
+++ b/TractorSpecs/app/model/model.html
@@ -195,7 +195,9 @@
         <div class="row">
             <div class="span12">
 
-                <h2>services overview</h2>
+                <h2>services overview 
+                    <button data-ng-click="vm.editClick(vm.model.modelId)" class="btn btn-default">Edit</button>
+                </h2>
 
                 <div class="row">
                     <div class="span4" data-ng-repeat="masterSpecClass in vm.masterSpecClasses">
