--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -292,7 +292,7 @@
                                         <div class="caption">
                                             <h3>{{ vm.selectedSpecClass.className }}</h3>
                                             <p data-ng-repeat="specification in vm.model.specifications | filter:{ specName: { specClassId: vm.selectedSpecClass.specClassID }}">
-                                                {{ specification.specName.displayName }}: {{ specification.specValue }}
+                                                {{specification.specNameId}} - {{ specification.specificationId }} - {{ specification.specName.displayName }}: {{ specification.specValue }}
                                             </p>
                                             <!--<p><a href="#" class="button2">Read More</a></p>-->
                                         </div>
