- Added the about view and controller.

--- a/TractorSpecs/app/about/about.html
+++ b/TractorSpecs/app/about/about.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="index.html">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;about us</div>
+                    <div class="breadcrumbs1_inner"><a href="#/home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;about us</div>
                 </div>
             </div>
         </div>
@@ -152,114 +152,32 @@
 
                 <h1>Who we are</h1>
 
-                <h3>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Ipsum dolor sit amet conse ctetur adipisicing elit.</h3>
-
-                <div class="thumb1">
-                    <div class="thumbnail clearfix">
-                        <figure class="img-polaroid"><img src="theme/TractorSpecs_Original/images/{{ vm.make.mfgLogoImg }}" alt=""></figure>
-                        <div class="caption">
-                            <p>
-                                {{ vm.make.mfgDesc }}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <h2>MODELS</h2>
-
-                <div class="row">
-                    <div class="makeColumns">
-                        <div class="span2">
-                            <div data-ng-repeat="model in vm.models">
-                                <div class="thumb2">
-                                    <div class="thumbnail clearfix">
-                                        <a href="" data-ng-click="vm.modelClick(model.modelUrl)">
-                                            <figure><img src="theme/EcoAgriculture/images/about06.png" alt=""></figure>
-                                            <div class="caption">
-                                                <div class="txt1">{{ model.modelNumber }}</div>
-                                                <!--<div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>-->
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                        <!--<div class="span4 offset1">
-            <div class="thumb2">
-                <div class="thumbnail clearfix">
-                    <a href="#">
-                        <figure><img src="theme/EcoAgriculture/images/about03.png" alt=""></figure>
-                        <div class="caption">
-                            <div class="txt1">OUR TECHNOLOGIES</div>
-                            <div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>-->
-                    </div>
-
-                <!--<div class="row">
-                    <div class="span4">
-                        <div class="thumb2">
-                            <div class="thumbnail clearfix">
-                                <a href="#">
-                                    <figure><img src="theme/EcoAgriculture/images/about04.png" alt=""></figure>
-                                    <div class="caption">
-                                        <div class="txt1">PREMIUM PRODUCTS</div>
-                                        <div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="span4 offset1">
-                        <div class="thumb2">
-                            <div class="thumbnail clearfix">
-                                <a href="#">
-                                    <figure><img src="theme/EcoAgriculture/images/about05.png" alt=""></figure>
-                                    <div class="caption">
-                                        <div class="txt1">PARTNERSHIP</div>
-                                        <div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="span4">
-                        <div class="thumb2">
-                            <div class="thumbnail clearfix">
-                                <a href="#">
-                                    <figure><img src="theme/EcoAgriculture/images/about06.png" alt=""></figure>
-                                    <div class="caption">
-                                        <div class="txt1">RESEARCH</div>
-                                        <div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="span4 offset1">
-                        <div class="thumb2">
-                            <div class="thumbnail clearfix">
-                                <a href="#">
-                                    <figure><img src="theme/EcoAgriculture/images/about07.png" alt=""></figure>
-                                    <div class="caption">
-                                        <div class="txt1">MARKET</div>
-                                        <div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
-
-
+                <ul>
+                    <li style="padding-bottom:10px">
+                        <strong>What is TractorSpecs.com?</strong><br>
+                        Our website is a collection of information about farm and construction equipment. Primarily tractors, but we encompass a bit of everything. Our goal is to collect specification data, pictures, prices and any documents for each machine.
+                    </li>
+                    <li style="padding-bottom:10px">
+                        <strong>Where does the information come from?</strong><br>
+                        Nothing you find on our website is unique, we're simply an agragation of owner reports, manuals, print, and product bochures. Some of what you'll find here has been collected by our staff, other data has been submited by equipment owners and enthusists. We do not promise 100% accuracy, however we do our best.
+                    </li>
+                    <li style="padding-bottom:10px">
+                        <strong>How do you determine pricing?</strong><br>
+                        The pricing engine weights several factors in determining equipment values. Our starting data is based upon used listings put forth by equipment dealerships. This is run though a simple depriciation curve based on the type of equipment and its age. This is a simular method used by equipment blue books. While a mathamatical equasion can give an idea of equipment value, its only a guideline and not a substitue for an experienced appriasor.
+                    </li>
+                    <li style="padding-bottom:10px">
+                        <strong>Can you help me with...?</strong><br>
+                        No, we can't. We do not represent any of the companies who's products we have information about. Your best source of assistance will always be though our advertisers, or your local dealer network.
+                    </li>
+                    <li style="padding-bottom:10px">
+                        <strong>Can we advertise on this website?</strong><br>
+                        Yes. Please contact us and let us know what you've got in mind. We typicaly use 300x250 blocks, however we have other sites in out family that can accomidate other sizes and campains equaly well. We can structure programs around either CPM or fixed monthly pricing.
+                    </li>
+                    <li style="padding-bottom:10px">
+                        <strong>Can we use your data?</strong><br>
+                        We offer an web service for used equipment websites and dealers wishing to utilize our database to enhance their equipment listings. Contact us for details on this service.
+                    </li>
+                </ul>
 
             </div>
             <div class="span3">
