--- a/TractorSpecs/app/home/home.html
+++ b/TractorSpecs/app/home/home.html
@@ -233,25 +233,25 @@
                         <div class="txt1">Equipment<br>Parts</div>
                         <div class="txt2">Messicks Equipment, one of our site sponsors, has added several parts catalogs to their forward thinking website. Some of these are brand new and are availabile only at Messicks.</div>
                         <ul class="clearfix" style="list-style: none;columns: 3;-webkit-columns: 3;-moz-columns: 3;">
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/landpride')">
                                Land Pride Parts
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/befco')">
                                 Befco Parts
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/alamo')">
                                 Alamo Industrial
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/ferris')">
                                 Ferris Parts
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/simplicity')">
                                 Simplicity Parts
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/exmark')">
                                 eXmark Parts
                             </li>
-                            <li>
+                            <li data-ng-click="vm.linkClick('http://www.messicks.com/vendor/cub-cadet')">
                                 Cub Cadet Parts
                             </li>
                         </ul>
@@ -279,7 +279,7 @@
             </div>-->
             <div class="span4 banner banner4">
                 <div class="banner_inner">
-                    <a href="#">
+                    <a href="">
                         <div class="txt1">Just<br>Updated</div>
                         <div class="">
                             <ul class="clearfix" style="list-style: none;columns: 2;-webkit-columns: 2;-moz-columns: 2;">
@@ -334,7 +334,7 @@
 
                 <div class="box1">
                     <div class="caroufredsel_slider">
-                        <div class="txt1">Testimonials</div>
+                        <div class="txt1">Manufacturers</div>
                         <a class="prev_testimonial" href="#"></a>
                         <a class="next_testimonial" href="#"></a>
                         <ul class="clearfix">
