--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -192,30 +192,36 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="span12">
+                                <div class="control-group">
+                                    <button type="submit" class="submit">Submit</button>
+                                </div>
+                            </div>
+                        </div>
                         <h2>Upload Pictures</h2>
                         <div class="row">
-                            <div class="span4">
+                            <div class="span6">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputName">Your full name:</label>
+                                    <label class="control-label" for="inputName">Select the file:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
+                                        <input class="span4" type="file" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
-                            <div class="span4">
+                            <div class="span6">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputEmail">Your email:</label>
+                                    <label class="control-label" for="inputEmail">Description:</label>
                                     <div class="controls">
                                         <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
-                            <div class="span4">
+                        </div>
+                        <div class="row">
+                            <div class="span12">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputPhone">Phone number:</label>
-                                    <div class="controls">
-                                        <input class="span4" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
-                                    </div>
+                                    <button type="submit" class="submit">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -223,7 +229,7 @@
                         <div class="row">
                             <div class="span4">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputName">Your full name:</label>
+                                    <label class="control-label" for="inputName">Enter URL (http://):</label>
                                     <div class="controls">
                                         <input class="span4" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
                                     </div>
@@ -231,7 +237,7 @@
                             </div>
                             <div class="span4">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputEmail">Your email:</label>
+                                    <label class="control-label" for="inputEmail">Enter Description:</label>
                                     <div class="controls">
                                         <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
@@ -248,27 +254,35 @@
                         </div>
                         <h2>Add Pricing</h2>
                         <div class="row">
-                            <div class="span4">
+                            <div class="span3">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputName">Your full name:</label>
+                                    <label class="control-label" for="inputName">Dealer/Pricing:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
-                            <div class="span4">
+                            <div class="span3">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputEmail">Your email:</label>
+                                    <label class="control-label" for="inputEmail">Price:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
-                            <div class="span4">
+                            <div class="span3">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputPhone">Phone number:</label>
+                                    <label class="control-label" for="inputPhone">Model Year:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="span3">
+                                <div class="control-group">
+                                    <label class="control-label" for="inputPhone">Notes:</label>
+                                    <div class="controls">
+                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -279,21 +293,25 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputName">Your full name:</label>
                                     <div class="controls">
-                                        <!--<input class="span4" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">-->
                                         <select data-ng-options="specClass as specClass.className for specClass in vm.specClasses track by specClass.specClassID" data-ng-model="vm.selectedSpecClass"></select>
-                                        {{ vm.selectedSpecClass }}
+                                        <!--{{ vm.selectedSpecClass }}-->
                                     </div>
                                 </div>
-                            </div>
-                            <div class="span4">
+                            <!--</div>
+                            <div class="span4">-->
                                 <div class="thumb3">
                                     <div class="thumbnail clearfix">
-                                        <figure class="img-polaroid"><img src="theme/TractorSpecs_original/images/{{ vm.selectedSpecClass.icon }}" alt=""></figure>
+                                        <!--<figure class="img-polaroid">
+                                        <img src="theme/TractorSpecs_original/images/{{ vm.selectedSpecClass.icon }}" alt="">
+                                        </figure>-->
                                         <div class="caption">
-                                            <h3>{{ vm.selectedSpecClass.className }}</h3>
-                                            <p data-ng-repeat="specification in vm.model.specifications | filter:{ specName: { specClassId: vm.selectedSpecClass.specClassID }}">
-                                                {{specification.specNameId}} - {{ specification.specificationId }} - {{ specification.specName.displayName }}: {{ specification.specValue }}
-                                            </p>
+                                            <!--<h3>{{ vm.selectedSpecClass.className }}</h3>-->
+                                            <div data-ng-repeat="specification in vm.model.specifications | filter:{ specName: { specClassId: vm.selectedSpecClass.specClassID }}">
+                                                <h3>
+                                                    <!--{{ specification.specificationId }}-->
+                                                    {{ specification.specName.displayName }}: <input class="span4" type="text" data-ng-model="specification.specValue" />
+                                                </h3>
+                                            </div>
                                             <!--<p><a href="#" class="button2">Read More</a></p>-->
                                         </div>
                                     </div>
@@ -301,17 +319,9 @@
                             </div>
                             <div class="span4">
                                 <div class="control-group">
-                                    <label class="control-label" for="inputEmail">Your email:</label>
+                                    <label class="control-label" for="inputEmail">Source(website, book, etc):</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="span4">
-                                <div class="control-group">
-                                    <label class="control-label" for="inputPhone">Phone number:</label>
-                                    <div class="controls">
-                                        <input class="span4" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                        <input class="span4" type="text" id="inputEmail" name="email" value="Source(website, book, etc):" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Source(website, book, etc):' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
